# episcience

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/episcience-api/: Cargo.toml
crates/episcience-api/src/: errors.rs  lib.rs  middleware.rs  state.rs
crates/episcience-api/src/clients/: epigraph_edges.rs  epigraph_events.rs  mod.rs
crates/episcience-api/src/jobs/: episcience_job_queue.rs  mod.rs  staleness_worker.rs  synthesis_job.rs
crates/episcience-api/src/mcp/: blobs.rs  countersigns.rs  errors.rs  list_countersignatures.rs  mod.rs  observations.rs  protocols.rs  queries.rs  synthesize.rs
crates/episcience-api/src/routes/: blobs.rs  countersign.rs  export.rs  health.rs  mod.rs  protocols.rs  samples.rs  search.rs  syntheses.rs  synthesis_search.rs  workflow_runs.rs
crates/episcience-api/tests/: api_error_test.rs  episcience_job_queue_test.rs  mcp_tools_test.rs  mcp_write_tools_test.rs  phase01_e2e_test.rs  protocols_routes_test.rs  staleness_worker_test.rs  syntheses_routes_test.rs  synthesis_e2e_smoke.rs  synthesis_job_handler_test.rs  synthesis_search_test.rs  workflow_runs_route_test.rs
crates/episcience-core/: Cargo.toml
crates/episcience-core/src/: blob.rs  countersign.rs  errors.rs  lib.rs  notebook.rs  protocol.rs  sample.rs
crates/episcience-core/src/synthesis/: errors.rs  mock_llm.rs  mod.rs  novelty.rs  pipeline.rs  proptest.rs  refinement.rs  skill.rs  traversal.rs  util.rs  verifier.rs
crates/episcience-core/src/synthesis/clustering/: mod.rs  signed_louvain.rs
crates/episcience-core/src/synthesis/skills/: baseline.rs  code_review.rs  lab_notebook.rs  literature.rs  mod.rs  registry_diff.rs
crates/episcience-core/src/synthesis/skills/markdown/: baseline.md  code_review.md  lab_notebook.md  literature.md  registry_diff.md
crates/episcience-core/tests/: synthesis_pipeline_stage1_test.rs
crates/episcience-db/: Cargo.toml
crates/episcience-db/src/: errors.rs  lib.rs  traits.rs
crates/episcience-db/src/repos/: blob.rs  countersign.rs  mod.rs  notebook.rs  protocol.rs  sample.rs  synthesis.rs  synthesis_clusters.rs  synthesis_embeddings.rs  synthesis_jobs.rs  synthesis_membership.rs  synthesis_provo_edges.rs  synthesis_shares.rs  synthesis_staleness.rs  worker_state.rs
crates/episcience-db/src/synthesis/: edge_writer.rs  mod.rs  novelty_backend_internal.rs  novelty_backend_paper.rs  pipeline.rs  publish.rs
crates/episcience-db/tests/: syntheses_table_test.rs  synthesis_clusters_repo_test.rs  synthesis_clusters_test.rs  synthesis_embeddings_repo_test.rs  synthesis_embeddings_test.rs  synthesis_jobs_test.rs  synthesis_membership_repo_test.rs  synthesis_membership_test.rs  synthesis_pipeline_stage1_test.rs  synthesis_pipeline_stage2_test.rs  synthesis_pipeline_stage3_test.rs  synthesis_pipeline_stage4_test.rs  synthesis_pipeline_stage5_test.rs  synthesis_pipeline_stage6_test.rs  synthesis_provo_edges_repo_test.rs  synthesis_provo_edges_test.rs  synthesis_provo_edges_workflow_target_test.rs  synthesis_repo_test.rs  synthesis_shares_repo_test.rs  synthesis_shares_test.rs  synthesis_staleness_repo_test.rs  synthesis_staleness_test.rs  worker_state_repo_test.rs
docs/intro/: 01-quickstart-extension.md  02-concepts-science.md  04-glossary.md  05-workflows.md
docs/superpowers/plans/: 2026-03-30-episcience-phase1.md  2026-05-27-scilink-lessons-into-episcience.md  2026-05-28-epiclaw-episcience-integration.md  p3-status.md  p5-scope.md
docs/superpowers/specs/: 2026-06-14-data-driven-verifier-rubrics-design.md  2026-06-14-epiclaw-scheduler-on-epigraph-workflows-design.md  2026-06-14-synthesis-ready-push-design.md  2026-06-14-workflow-refines-edge-caller-design.md
migrations/: 001_initial_schema.sql  5001_signature_meaning.sql  5002_claims_fulltext_search.sql  5003_create_samples.sql  5004_create_protocols.sql  5005_create_blobs.sql  5006_create_countersignatures.sql  5007_quantity_pair_constraint.sql  5008_protocol_version_unique.sql  5009_samples_parent_restrict.sql  5010_countersign_chain.sql  5025_protocols_section_vocabulary.sql  5026_samples_workflow_run.sql
migrations/synthesis/: 5011_create_syntheses.sql  5012_create_synthesis_clusters.sql  5013_create_synthesis_embeddings.sql  5014_create_synthesis_jobs.sql  5015_create_synthesis_staleness_events.sql  5016_create_synthesis_shares.sql  5017_create_synthesis_claim_membership.sql  5018_create_synthesis_provo_edges.sql  5019_add_syntheses_failure_reason.sql  5020_syntheses_skill_column.sql  5021_syntheses_verifier_outcome.sql  5022_syntheses_skill_lab_notebook.sql  5023_syntheses_novelty.sql  5024_syntheses_refinement_temperature.sql  5028_syntheses_skill_literature.sql  5029_syntheses_skill_code_review.sql  5030_syntheses_skill_registry_diff.sql  5031_synthesis_provo_edges_target_kind_workflow.sql  5032_syntheses_autonomy_level.sql
migrations/upstream/: 001_initial_schema.sql  002_behavioral_executions.sql  003_business_function_entity_type.sql  004_stop_truth_value_overwrite.sql  005_task_event_edge_types.sql  006_provenance_patch_payload.sql  007_papers_doi_unique_constraint.sql  008_claim_signature_revocations.sql  009_conflict_taxonomy.sql  010_divergence_cache_validity_constraints.sql  011_derived_from_uppercase_factor.sql  012_cull_low_similarity_corroborates.sql  013_code_review_hardening.sql  014_grant_revoke_signature_scope.sql  015_graph_clusters.sql  016_add_evidence_embedding.sql  README.md
scripts/: ci-seed.sql  sync-upstream-migrations.sh
