[workspace]
resolver = "2"
members = [
    "crates/episcience-core",
    "crates/episcience-db",
    "crates/episcience-api",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"

[workspace.dependencies]
# EpiGraph upstream — path deps into the local public-epigraph worktree where
# Phase 0 prereq commits (P2 entity types, P3 events, P4 library APIs) live.
# When those PRs land in epigraph-io/epigraph public main, swap these to
# `git = "https://github.com/epigraph-io/epigraph", rev = "<merged-sha>"`.
epigraph-core        = { path = "../epigraph-wt-episcience-p0/crates/epigraph-core" }
epigraph-crypto      = { path = "../epigraph-wt-episcience-p0/crates/epigraph-crypto" }
epigraph-db          = { path = "../epigraph-wt-episcience-p0/crates/epigraph-db" }
epigraph-engine      = { path = "../epigraph-wt-episcience-p0/crates/epigraph-engine" }
epigraph-cli         = { path = "../epigraph-wt-episcience-p0/crates/epigraph-cli" }
epigraph-jobs        = { path = "../epigraph-wt-episcience-p0/crates/epigraph-jobs" }
epigraph-events      = { path = "../epigraph-wt-episcience-p0/crates/epigraph-events" }
epigraph-embeddings  = { path = "../epigraph-wt-episcience-p0/crates/epigraph-embeddings" }

# Internal crates
episcience-core = { path = "crates/episcience-core" }
episcience-db = { path = "crates/episcience-db" }

# Shared dependencies — mirror EpiGraph's pinned versions
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", default-features = false, features = [
    "runtime-tokio", "postgres", "uuid", "chrono", "json", "tls-rustls", "macros", "migrate"
] }
axum = { version = "0.7", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
printpdf = "0.7"
jsonwebtoken = "9"
async-trait = "0.1"
rmcp = { version = "0.15", features = ["server", "macros", "transport-io"] }
blake3 = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
pgvector = { version = "0.4", features = ["sqlx"] }
regex = "1"
