[workspace]
resolver = "2"
members = [
    "crates/episcience-core",
    "crates/episcience-db",
    "crates/episcience-api",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"

[workspace.dependencies]
# EpiGraph upstream — pinned to the head of feat/phase0-integrated (PR
# epigraph-io/epigraph#10) which carries the Phase 0 prereqs episcience needs:
# synthesis entity type on /edges, PROV-O predicates, edge.added/deleted +
# claim.superseded event emissions, library promotion of recall/get_belief,
# evidence.embedding migration, and the JobRunner error-preservation fix.
# When #10 merges, repin to the merged sha on main.
#
# Local development: override by adding to your personal ~/.cargo/config.toml:
#   [patch."https://github.com/epigraph-io/epigraph"]
#   epigraph-core = { path = "/abs/path/to/your/epigraph/crates/epigraph-core" }
#   ... (etc for each crate you want to override)
# Don't commit personal patches — keep the committed values CI-canonical.
epigraph-core        = { git = "https://github.com/epigraph-io/epigraph", rev = "11e6a5d88dbcb74bb60cad5de3751ff951a44932" }
epigraph-crypto      = { git = "https://github.com/epigraph-io/epigraph", rev = "11e6a5d88dbcb74bb60cad5de3751ff951a44932" }
epigraph-db          = { git = "https://github.com/epigraph-io/epigraph", rev = "11e6a5d88dbcb74bb60cad5de3751ff951a44932" }
epigraph-engine      = { git = "https://github.com/epigraph-io/epigraph", rev = "11e6a5d88dbcb74bb60cad5de3751ff951a44932" }
epigraph-cli         = { git = "https://github.com/epigraph-io/epigraph", rev = "11e6a5d88dbcb74bb60cad5de3751ff951a44932" }
epigraph-jobs        = { git = "https://github.com/epigraph-io/epigraph", rev = "11e6a5d88dbcb74bb60cad5de3751ff951a44932" }
epigraph-events      = { git = "https://github.com/epigraph-io/epigraph", rev = "11e6a5d88dbcb74bb60cad5de3751ff951a44932" }
epigraph-embeddings  = { git = "https://github.com/epigraph-io/epigraph", rev = "11e6a5d88dbcb74bb60cad5de3751ff951a44932" }

# Internal crates
episcience-core = { path = "crates/episcience-core" }
episcience-db = { path = "crates/episcience-db" }

# Shared dependencies — mirror EpiGraph's pinned versions
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", default-features = false, features = [
    "runtime-tokio", "postgres", "uuid", "chrono", "json", "tls-rustls", "macros", "migrate"
] }
axum = { version = "0.7", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
printpdf = "0.7"
jsonwebtoken = "9"
async-trait = "0.1"
rmcp = { version = "0.15", features = ["server", "macros", "transport-io"] }
schemars = { version = "1", features = ["uuid1", "chrono04"] }
blake3 = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
pgvector = { version = "0.4", features = ["sqlx"] }
regex = "1"
