[package]
name = "episcience-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "EpiScience ELN domain models — samples, protocols, notebook entries"

[features]
test-utils = []

[dependencies]
epigraph-core.workspace = true
epigraph-crypto.workspace = true
epigraph-cli.workspace = true
epigraph-engine.workspace = true
epigraph-embeddings.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
async-trait.workspace = true
sqlx.workspace = true
hex = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
async-trait.workspace = true

[[test]]
name = "synthesis_pipeline_stage1_test"
path = "tests/synthesis_pipeline_stage1_test.rs"
