[package]
name = "episcience-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "EpiScience ELN domain models — samples, protocols, notebook entries"

[features]
test-utils = ["dep:epigraph-cli"]

[dependencies]
epigraph-core.workspace = true
epigraph-crypto.workspace = true
epigraph-cli = { workspace = true, optional = true }
epigraph-engine.workspace = true
epigraph-embeddings.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
async-trait.workspace = true
sqlx.workspace = true
hex = "0.4"

[dev-dependencies]
# `synthesis::mock_llm` (gated by `test-utils`) imports the cli LlmClient, and
# its inline `#[cfg(test)] mod tests` block exercises that wrapper at unit-test
# time. Pipeline integration tests live in `episcience-db` since Stage 2+ need
# DB persistence calls; the dev-dep here is purely for the mock_llm unit tests.
epigraph-cli.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
async-trait.workspace = true
# Property-based tests for `synthesis` data types (Phase 5 Task 5.1):
#  - `SubgraphSnapshot` round-trips through serde-json bit-for-bit
#  - `read_predicate` monotonicity in `has_share` + owner-always-reads + public-always-reads
proptest = "1"
