[package]
name = "episcience-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "EpiScience ELN database repositories"

[dependencies]
episcience-core.workspace = true
epigraph-crypto.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
sqlx.workspace = true
tracing.workspace = true
tokio.workspace = true
hex = "0.4"
async-trait.workspace = true

[dev-dependencies]
sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "macros", "migrate", "tls-rustls"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
uuid = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

# Integration-test targets are added incrementally as each `tests/*_test.rs`
# file lands (one per synthesis migration/repo). Cargo's auto-discovery would
# also work, but explicit `[[test]]` blocks here pin stable filter names for
# `cargo test -p episcience-db <name>`. Append blocks here when adding tests.

[[test]]
name = "syntheses_table_test"
path = "tests/syntheses_table_test.rs"
